fix scrollbars

--- a/frontend/src/components/Diff/CompilationPanel.module.scss
+++ b/frontend/src/components/Diff/CompilationPanel.module.scss
@@ -32,8 +32,6 @@
     padding: 0.8rem;
 
     overflow: auto;
-    scrollbar-color: #fff3 transparent;
-    scrollbar-width: thin;
 
     user-select: text;
     font-family: var(--monospace);
